Added image asserts to the project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="This is a app that help an individual to send messages to poeple through their via e-mail "
     />
-    <title>Perry || Message App</title>
+    <title>MessApp || Perry</title>
   </head>
   <body></body>
 </html>
